--- a/trellolike.css
+++ b/trellolike.css
@@ -1,9 +1,9 @@
-html, body {
+body {
     width: 100%;
     height: 100%;
-  }
-  body {
     background-color: #23719F;
+  }
+  #main_board  {
     overflow: auto;
     padding: 5px;
     font: 14px/18px "Helvetica Neue",Arial,Helvetica,sans-serif;
